# kvtide

./: .dockerignore  .gitignore  Makefile  README.md  README_zh.md  docker-compose.prod.yaml  docker-compose.yaml  go.mod  go.sum  mise.toml  pyrightconfig.json  server.toml
config/: compose-server.toml
dashboard/: index.html  package-lock.json  package.json  server.mjs  vite.config.ts
docker/: dashboard.Dockerfile  executor.Dockerfile  server.Dockerfile  web.Dockerfile
executor/: main.py  setting.py
k8s/: README.md
llm_serve/: block.py  executor_service.py  main.py  pyproject.toml  setting.py  test_main.py
llm_serve/adapter/: dynamic_cache.py
llm_serve/block/: __init__.py  block.py
llm_serve/config/: executor.toml
llm_serve/kvtide/v1/: block_pb2.pyi  executor_connect.py  executor_pb2.py  service_pb2.pyi
llm_serve/mini_llm_serve/v1/: block_pb2.py  block_pb2.pyi  core_pb2.py  execute_connect.py  execute_pb2.py  execute_pb2.pyi  executor_connect.py  executor_pb2.py  executor_pb2.pyi  service_connect.py  service_pb2.py  service_pb2.pyi
llm_serve/request_state/: __init__.py  request.py  request_state.py
llm_serve/runner/: __init__.py  base.py  batch.py  factory.py  kv_cache.py  mock.py  sequence.py  transformers_cpu.py
llm_serve/runtime/: batch.py
llm_serve/scripts/: generate_qwen_golden.py
llm_serve/tests/: test_batch.py  test_dynamic_cache_adapter.py  test_executor_service.py  test_kv_cache.py  test_mock_runner.py  test_transformers_cpu.py
proto/: buf.gen.yaml
scripts/: plot_stage2_benchmark.py  plot_stage3_benchmark.py
tests/: helper.go  (+2 more)
(+188 files in other folders)
