[project]
name = "llm-serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "connectrpc>=0.9.0",
    "protobuf>=7.35.1",
    "psutil>=7.2.2",
    "torch>=2.12.1",
    "transformers>=5.13.0",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
